# driving_swarm_infrastructure

./: .flake8  .gitignore  .gitmodules  README.md  main.sh  multiple_simulations.bash  pyproject.toml  requirements.txt  teleop.bash  tsh.bash
src/driving_swarm_bringup/: package.xml  setup.cfg  setup.py
src/driving_swarm_bringup/driving_swarm_bringup/: initial_pose_pub.py  nav2_gazebo_spawner.py  spawn_turtlebot.py  watchdog.py
src/driving_swarm_bringup/launch/: launch_config.yaml  multi_real_robot.launch.py  multi_real_robot_fix_pos.launch.py  multi_real_robot_var_pos.launch.py  multi_robot.launch.py  simulator.launch.py  single_real_robot.launch.py  single_robot.launch.py  spawn_tb3.launch.py  two_robot_nav_stack.launch.py
src/driving_swarm_bringup/maps/: empty_room.yaml  face.yaml  face_gimp.pgm  face_gimp.yaml  icra2021_map.pgm  icra2021_map_no_obstacle.pgm  icra2021_map_no_obstacle.yaml  icra2024.pgm  icra2024.yaml  lndw2022.pgm  lndw2022.yaml  swarmlab-2022-05-03.pgm  swarmlab-2022-05-03.yaml  swarmlab_3_gaps.yaml  swarmlab_arena.yaml  swarmlab_two_walls.yaml  swarmlab_two_walls_cut.xcf  thesis_exp_corner.pgm  thesis_exp_corner.yaml  thesis_exp_house.pgm  thesis_exp_house.yaml  thesis_exp_pillars.pgm  thesis_exp_pillars.yaml  thesis_exp_tb3_house.yaml  thesis_exp_wall.pgm  thesis_exp_wall.yaml  three_pillars.pgm  three_pillars.yaml  twoRoomsWorld.pgm  twoRoomsWorld.yaml
src/driving_swarm_bringup/params/: convert_config.py  empty_poses.yaml  empty_room.yaml  icra2021.yaml  icra2021_demo.yaml  icra2021_real.yaml  icra2021_sim.yaml  icra2021_waypoints.yaml  icra2024_poses.yaml  icra2024_poses1m.yaml  icra2024_poses_tight.yaml  icra2024_real_poses.yaml  icra2024_real_waypoints.yaml  icra2024_waypoints.yaml  icra2024_waypoints1m.yaml  icra2024_waypoints1m_roundtrip.yaml  icra2024_waypoints_roundtrip.yaml  icra2024_waypoints_tight.yaml  icra_2021_poses.yaml  icra_2021_real_waypoints.yaml  icra_2021_waypoints.yaml  lndw2022.yaml  lndw2022_poses.yaml  lndw2022_waypoints.yaml  lndw2022sim.yaml  nav2_params_namespaced.yaml  robot_names_real.yaml  robot_names_sim.yaml  swarmlab.yaml  swarmlab_3_gaps_poses.yaml  swarmlab_3_gaps_real.yaml  swarmlab_two_walls_poses.yaml  swarmlab_two_walls_real.yaml  swarmlab_two_walls_sim.yaml  swarmlab_two_walls_waypoints.yaml  tb3_world_waypoints.yaml  tb_world_poses.yaml  thesis_exp_house1_sim.yaml  thesis_exp_house2_sim.yaml  thesis_exp_sim.yaml  (+4 more)
src/driving_swarm_bringup/rviz/: flocking_ns.rviz
src/driving_swarm_bringup/worlds/: empty_room.world  face.world  icra2021_no_obstacle.world  icra2021_world.world  icra2024.world  lndw2022.world  maze.world  swarmlab-2022-05-03.world  swarmlab_3_gaps.world  (+9 more)
src/driving_swarm_core/: package.xml  setup.cfg  setup.py
src/driving_swarm_messages/: CMakeLists.txt  package.xml
(+298 files in other folders)
