<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>driving_swarm_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sebastian.mai@ovgu.de">traichel</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>transforms3d</exec_depend>
  <exec_depend>zenoh_bridge_dds</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
